--- a/css/estilos.css
+++ b/css/estilos.css
@@ -5,4 +5,13 @@ body{
 }
 #container{
     color: brown;
+    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    font-style: italic;
+    font-size: 60px;
+}
+#futbol{
+    background-color: coral;
+    margin: 10pc;
+    font-family: sans-serif;
+    font-size: 87px;
 }
