--- a/css/estilos.css
+++ b/css/estilos.css
@@ -9,3 +9,7 @@ body{
     text-align: justify;
     
 }
+#game{
+    color: cornflowerblue;
+    font-family: Georgia, 'Times New Roman', Times, serif;
+}
