nuevo estilo en futbol y nuevo parrafo

--- a/css/estilos.css
+++ b/css/estilos.css
@@ -10,10 +10,10 @@ body{
     font-size: 60px;
 }
 #futbol{
-    background-color: coral;
+    background-color: royalblue;
     margin: 10pc;
     font-family: sans-serif;
-    font-size: 87px;
+    font-size: 10px;
 #blog{
     color: red;
 }
